# django-drf-api

./: .gitignore  README.md  api_views.py  input.css  package.json  pyproject.toml  serializers.py
.tmp/: api_urls.py
core/: settings.py
studentplatform/: api_urls.py  api_views.py  forms.py  serializers.py  urls.py  views.py
studentplatform/static/css/: style.css
studentplatform/templates/: add_student.html  base.html  course_detail.html  edit_student.html  login.html  student_detail.html  student_list.html
studentplatform/templates/cotton/button/: index.html
