[project]
name = "django-drf-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-stubs[compatible-mypy]>=6.0.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs[compatible-mypy]>=3.16.9",
]

[tool.uv]
# Docs: https://docs.astral.sh/uv/reference/settings
package = false

[tool.mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
enable_error_code = [
  "truthy-bool",
  "truthy-iterable",
  "redundant-expr",
  "unused-awaitable",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-self",
  "explicit-override",
  "unimported-reveal",
  "deprecated",
  "exhaustive-match",
]

explicit_package_bases = true
ignore_missing_imports = true
local_partial_types = true
strict = true
strict_bytes = true
warn_unreachable = true

plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
module = ["*.migrations", "*.migrations.*"]
# Django migrations should not produce any errors (they are tested anyway):
ignore_errors = true

[tool.django-stubs]
django_settings_module = "core.settings"
strict_settings = false
